# ros2_docker_setup

./: .gitignore  LICENSE  README.md  onnxruntime_installation_guide.md  setup.sh
.devcontainer/: Dockerfile  devcontainer.json  devcontainer_details.md
install_manager/: README.md  README_INSTALL_MANAGER.md  install_config.yaml  install_manager.py  installation_guide.md
install_manager/core/: __init__.py  config.py  installer.py
install_manager/modules/: __init__.py  onnx_runtime.py  opencv.py  ros2sysmon.py
install_manager/profiles/: full.yaml  minimal.yaml
installers/: onnx_runtime.sh  opencv.sh  ros2sysmon.sh
src/beam_detector_pkg/: CMakeLists.txt  README.md  package.xml
src/beam_detector_pkg/include/beam_detector_pkg/: YOLO11-OBB.hpp
src/beam_detector_pkg/include/beam_detector_pkg/yolo_obb/: YOLO11-OBB.hpp  YOLO8-OBB.hpp
src/beam_detector_pkg/include/beam_detector_pkg/yolo_obb/tools/: BoundedThreadSafeQueue.hpp  Debug.hpp  ScopedTimer.hpp
src/beam_detector_pkg/launch/: beam_detector.launch.py
src/beam_detector_pkg/src/: beam_detector_node.cpp
src/ros2_tutorial/: CMakeLists.txt  package.xml
src/ros2_tutorial/include/ros2_tutorial/: timer_callback_node.hpp
src/ros2_tutorial/src/: timer_callback_node.cpp
